# chemical-information-extraction

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
config/: __init__.py  constants.py  di_container.py  persistence_settings.py  routes.py
docker/: Dockerfile  dev.env
docker/base/: Dockerfile
docker/deployment/: entrypoint.sh  uwsgi.ini
resources/: US06179729B2.xml  US06181000B2.xml  US06181003B2.xml  US06181004B2.xml  US06181005B2.xml  US06181006B2.xml  US06181007B2.xml  US06181008B2.xml  US06181009B2.xml  US06181010B2.xml  US06181011B2.xml  US06181013B2.xml  US06181014B2.xml  US06181015B2.xml  US06181016B2.xml  US06181017B2.xml  US06181018B2.xml  US06181019B2.xml  US06181020B2.xml  US06181021B2.xml  US06181022B2.xml  US06181023B2.xml  US06181024B2.xml  US06181025B2.xml  US06181026B2.xml  US06181027B2.xml  US06181028B2.xml  US06181029B2.xml  US06181030B2.xml  US06181031B2.xml  US06181032B2.xml  US06181033B2.xml  US06181034B2.xml  US06181036B2.xml  US06181037B2.xml  US06181038B2.xml  US06181039B2.xml  US06181041B2.xml  US06181042B2.xml  US06181043B2.xml  (+49 more)
src/: app.py
src/application/parsing/: document_abstract_parser.py  document_claims_parser.py  document_description_parser.py  document_metadata_parser.py  document_title_parser.py
src/application/service/: application_service.py  distribute_document_batches_app_service.py  load_document_app_service.py  process_document_app_service.py  util.py
src/common/: app_container.py
src/common/logging/: logging_adapter.py
src/domain/model/: metadata.py
(+27 files in other folders)
