[tool.poetry]
name = "chemical-information-extraction"
version = "0.1.0"
description = ""
authors = ["sperez <serpear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-restx = "^0.2.0"
dependency-injector = "^4.5.1"
lxml = "^4.6.1"
flask-mongoengine = "^1.0.0"
spacy = "^2.3.4"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
